--- a/faq.html
+++ b/faq.html
@@ -2,12 +2,14 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Charlie Pity Lite</title>
+  <link rel="icon" href="favicon.ico" />
+  <script src="js/main.js" defer></script>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="bg-gray-900 text-white font-sans">
+<body class="bg-gray-900 text-white font-sans opacity-0">
   <header class="bg-gray-800 py-4 shadow">
     <div class="container mx-auto flex justify-between items-center px-4">
       <div class="flex items-center space-x-3">
