--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Charlie Pity Lite</title>
+  <title>¿Quién soy?</title>
   <link rel="icon" href="favicon.ico" />
   <script src="js/main.js" defer></script>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
@@ -18,15 +18,14 @@
       </div>
       <nav class="space-x-4">
         <a href="index.html" class="hover:text-yellow-300">Inicio</a>
-        <a href="chat.html" class="hover:text-yellow-300">Chat</a>
         <a href="about.html" class="hover:text-yellow-300">¿Quién soy?</a>
         <a href="faq.html" class="hover:text-yellow-300">FAQ</a>
         <a href="contact.html" class="hover:text-yellow-300">Contacto</a>
       </nav>
     </div>
   </header>
-  <main class="container mx-auto px-4 py-8">
-    <h2 class='text-3xl font-bold mb-4'>¿Quién soy?</h2><p>Soy Charlie Pity, tu asistente amable y profesional entrenado en Odoo y automatización empresarial.</p>
+  <main class="container mx-auto px-4 py-12">
+    <p class='text-lg'>Soy Charlie Pity, tu asistente especializado en automatización empresarial con Odoo. Siempre listo para ayudarte.</p>
   </main>
   <footer class="bg-gray-800 text-center text-sm py-4 text-gray-400">
     © 2025 Easy Tech Services | WhatsApp: +507 6769-6539 | contacto@easytech.services
