--- a/faq.html
+++ b/faq.html
@@ -1,15 +1,23 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Charlie Pity Lite</title>
+  <title>Charlie Pity - Inicio</title>
   <link rel="icon" href="favicon.ico" />
-  <script src="js/main.js" defer></script>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <style>
+    .fade-in {
+      animation: fadeIn 1s ease-in-out;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+  </style>
 </head>
-<body class="bg-gray-900 text-white font-sans opacity-0">
+<body class="bg-gray-900 text-white font-sans">
+
   <header class="bg-gray-800 py-4 shadow">
     <div class="container mx-auto flex justify-between items-center px-4">
       <div class="flex items-center space-x-3">
@@ -18,18 +26,28 @@
       </div>
       <nav class="space-x-4">
         <a href="index.html" class="hover:text-yellow-300">Inicio</a>
-        <a href="chat.html" class="hover:text-yellow-300">Chat</a>
         <a href="about.html" class="hover:text-yellow-300">¿Quién soy?</a>
         <a href="faq.html" class="hover:text-yellow-300">FAQ</a>
         <a href="contact.html" class="hover:text-yellow-300">Contacto</a>
       </nav>
     </div>
   </header>
-  <main class="container mx-auto px-4 py-8">
-    <h2 class='text-3xl font-bold mb-4'>Preguntas Frecuentes</h2><ul class='list-disc pl-6'><li>¿Charlie está disponible siempre? Sí, 24/7.</li><li>¿En qué puede ayudarte? En todo lo relacionado con Odoo y soporte técnico general.</li></ul>
+
+  <main class="container mx-auto px-4 py-12 fade-in">
+    <div class="flex justify-center items-center flex-col md:flex-row space-y-8 md:space-y-0 md:space-x-8">
+      <img src="img/CharliePity.png" alt="Charlie Pity" class="w-60 rounded shadow-lg">
+      <iframe
+        src="https://chat.easytech.services"
+        style="width: 370px; height: 500px; border: none; border-radius: 12px; box-shadow: 0 0 20px rgba(0,0,0,0.2);"
+        title="Charlie Pity Chat"
+        class="fade-in"
+      ></iframe>
+    </div>
   </main>
+
   <footer class="bg-gray-800 text-center text-sm py-4 text-gray-400">
     © 2025 Easy Tech Services | WhatsApp: +507 6769-6539 | contacto@easytech.services
   </footer>
+
 </body>
 </html>
