--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Charlie Pity Lite</title>
+  <title>Inicio</title>
   <link rel="icon" href="favicon.ico" />
   <script src="js/main.js" defer></script>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <style>
+    .animate-fadeIn {
+      animation: fadeIn 1.2s ease-out forwards;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to   { opacity: 1; transform: translateY(0); }
+    }
+  </style>
 </head>
 <body class="bg-gray-900 text-white font-sans opacity-0">
   <header class="bg-gray-800 py-4 shadow">
@@ -18,16 +26,24 @@
       </div>
       <nav class="space-x-4">
         <a href="index.html" class="hover:text-yellow-300">Inicio</a>
-        <a href="chat.html" class="hover:text-yellow-300">Chat</a>
         <a href="about.html" class="hover:text-yellow-300">¿Quién soy?</a>
         <a href="faq.html" class="hover:text-yellow-300">FAQ</a>
         <a href="contact.html" class="hover:text-yellow-300">Contacto</a>
       </nav>
     </div>
   </header>
-  <main class="container mx-auto px-4 py-8">
-    <h2 class='text-3xl font-bold mb-4'>Bienvenido a Charlie Pity</h2><p>Tu asistente inteligente para Odoo y automatización empresarial.</p><img src='img/CharliePity.png' alt='Charlie Pity' class='w-64 mx-auto mt-6 rounded shadow'>
+
+  <main class="container mx-auto px-4 py-12">
+    <div class="flex flex-col md:flex-row items-center justify-center space-y-8 md:space-y-0 md:space-x-12 animate-fadeIn">
+      <img src="img/CharliePity.png" alt="Charlie Pity" class="w-64 rounded-2xl shadow-2xl transition-transform transform hover:scale-105">
+      <iframe
+        src="https://chat.easytech.services"
+        style="width: 400px; height: 520px; border: none; border-radius: 12px; box-shadow: 0 0 20px rgba(0,0,0,0.2);"
+        title="Charlie Pity Chat"
+      ></iframe>
+    </div>
   </main>
+
   <footer class="bg-gray-800 text-center text-sm py-4 text-gray-400">
     © 2025 Easy Tech Services | WhatsApp: +507 6769-6539 | contacto@easytech.services
   </footer>
